Fix the JDK_JAVA_OPTIONS