@@ -145,7 +145,12 @@ public class DefaultClient implements Client {
     }
 
     public DefaultClient(DaemonParameters parameters) {
-        this.parameters = parameters;
+        // Those options are needed in order to be able to set the environment correctly
+        this.parameters = parameters.withJdkJavaOpts(
+                " --add-opens java.base/java.io=ALL-UNNAMED"
+                        + " --add-opens java.base/java.lang=ALL-UNNAMED"
+                        + " --add-opens java.base/java.util=ALL-UNNAMED"
+                        + " --add-opens java.base/sun.nio.fs=ALL-UNNAMED");
     }
 
     @Override
